Adding unit test for file-change tracking decorator