@@ -1,6 +1,5 @@
 package org.commonjava.indy.filer.def;
 
-import org.apache.commons.io.FileUtils;
 import org.commonjava.indy.filer.def.conf.DefaultStorageProviderConfiguration;
 import org.commonjava.maven.galley.event.EventMetadata;
 import org.commonjava.maven.galley.io.AbstractTransferDecorator;
@@ -13,13 +12,12 @@ import java.io.FileWriter;
 import java.io.FilterOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.io.PrintWriter;
-import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
+import java.util.Calendar;
 import java.util.Date;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.TimeZone;
 
 import static org.slf4j.LoggerFactory.getLogger;
 
@@ -30,23 +28,35 @@ public class FileChangeTrackingDecorator
 
     private final DefaultStorageProviderConfiguration config;
 
-    private volatile int changeCounter = 0;
+    private volatile int changeCounter;
 
     private File currentFile;
+
+    private long nextRollDate;
 
     FileChangeTrackingDecorator( DefaultStorageProviderConfiguration config )
     {
         this.config = config;
-        this.currentFile = generateCurrentFile();
+        resetTrackingFile();
     }
 
-    private File generateCurrentFile()
+    private void resetTrackingFile()
     {
-        File listFile = Path.of( config.getChangeTrackingDirectory() )
-                     .resolve( new SimpleDateFormat( "yyyy-MM-ddThhmmss.lst" ).format( new Date() ) )
+        Date currentDate = new Date();
+        Calendar c = Calendar.getInstance();
+        c.setTime( currentDate );
+        c.set(Calendar.DATE, c.get( Calendar.DATE ) + 1);
+        c.set( Calendar.HOUR, 0 );
+        c.set( Calendar.MINUTE, 0 );
+        c.set( Calendar.SECOND, 0 );
+        c.set( Calendar.MILLISECOND, 0 );
+        this.nextRollDate = c.getTime().getTime();
+        this.currentFile = Paths.get( config.getChangeTrackingDirectory() )
+                     .resolve( new SimpleDateFormat( "yyyy-MM-dd'/'hh'.'mm'.'ss'.'SSS'.lst'" ).format( currentDate ) )
                      .toFile();
 
-        return listFile;
+        this.currentFile.getParentFile().mkdirs();
+        this.changeCounter = 0;
     }
 
     @Override
@@ -60,6 +70,7 @@ public class FileChangeTrackingDecorator
     public void decorateCopyFrom( Transfer from, Transfer transfer, EventMetadata metadata ) throws IOException
     {
         super.decorateCopyFrom( from, transfer, metadata );
+        logger.info( "Logging copy-from to changed-file: {}", transfer.getPath() );
         writeChangedPath( transfer );
     }
 
@@ -67,6 +78,7 @@ public class FileChangeTrackingDecorator
     public void decorateDelete( Transfer transfer, EventMetadata metadata ) throws IOException
     {
         super.decorateDelete( transfer, metadata );
+        logger.info( "Logging delete to changed-file: {}", transfer.getPath() );
         writeChangedPath( transfer );
     }
 
@@ -74,6 +86,7 @@ public class FileChangeTrackingDecorator
     public void decorateCreateFile( Transfer transfer, EventMetadata metadata ) throws IOException
     {
         super.decorateCreateFile( transfer, metadata );
+        logger.info( "Logging create-file to changed-file: {}", transfer.getPath() );
         writeChangedPath( transfer );
     }
 
@@ -83,13 +96,16 @@ public class FileChangeTrackingDecorator
         Path transferPath = transfer.getDetachedFile().toPath().toAbsolutePath().normalize();
         if ( transferPath.startsWith( storageRoot ) )
         {
-            try ( FileWriter fw = new FileWriter( getCurrentListFile() ) )
+            try ( FileWriter fw = new FileWriter( getCurrentListFile(), true ) )
             {
-                if ( changeCounter < 1 )
+                logger.info( "Change counter: {}", changeCounter );
+                if ( changeCounter > 1 )
                 {
                     fw.write( "\n" );
                 }
-                fw.write( "./" + transferPath.relativize( storageRoot ) );
+
+                fw.write( "./" + storageRoot.relativize( transferPath ) );
+                changeCounter++;
             }
             catch ( IOException | IllegalArgumentException e )
             {
@@ -102,8 +118,14 @@ public class FileChangeTrackingDecorator
     {
         if ( changeCounter >= config.getChangeTrackingRollSize() )
         {
-            this.currentFile = generateCurrentFile();
-            this.changeCounter = 0;
+            resetTrackingFile();
+        }
+        else
+        {
+            if ( System.currentTimeMillis() >= this.nextRollDate )
+            {
+                resetTrackingFile();
+            }
         }
 
         return currentFile;
@@ -124,6 +146,7 @@ public class FileChangeTrackingDecorator
         public void close() throws IOException
         {
             super.close();
+            logger.info( "Logging write to changed-file: {}", transfer.getPath() );
             writeChangedPath( transfer );
         }
     }
